--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,8 @@
                 </ul>
                 <button id="refreshButton">Refresh</button>
             </div>
-            <div id="detailPage">
+            AAAA
+            <div >
                 <div id="resultDiv"></div>
                 <div>
                     <input type="text" id="messageInput" value="Hello"/>
